--- a/naunet/templates/base/cpp/tests/CMakeLists.txt.j2
+++ b/naunet/templates/base/cpp/tests/CMakeLists.txt.j2
@@ -79,6 +79,7 @@ if(MAKE_PYTHON)
         {% endblock pytargets -%}
     )
 
+    message(STATUS "Python interface test targets = ${PYTESTTARGETS}")
     foreach(name ${PYTESTTARGETS})
         configure_file(${name}.py.in ${name}.py)
 
@@ -88,9 +89,9 @@ if(MAKE_PYTHON)
                     test_${name}_py
                 COMMAND
                     ${CMAKE_COMMAND} -E env 
-                        PYNAUNET_PATH=$<TARGET_FILE_DIR:${PYMODNAME}>
+                        PYNAUNET_MODEL_PATH=${CMAKE_BINARY_DIR}/python
                         NAUNET_CONFIG_PATH=${CMAKE_SOURCE_DIR}
-                    ${Python_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/${name}.py
+                    ${Python3_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/${name}.py
             )
         endif()
     endforeach(name ${PYTESTTARGETS})
