--- a/naunet/templates/base/cpp/tests/singlegrid.py.in.j2
+++ b/naunet/templates/base/cpp/tests/singlegrid.py.in.j2
@@ -1,12 +1,12 @@
 import os
 import sys
-sys.path.append(os.getenv('PYNAUNET_PATH'))
+sys.path.append(os.getenv('PYNAUNET_MODEL_PATH'))
 
 import numpy as np
 from pathlib import Path
 from tomlkit.toml_file import TOMLFile
 
-from @PYMODNAME@ import Naunet, NaunetData
+from pynaunet_model import Naunet, NaunetData
 
 config_path = Path(os.getenv('NAUNET_CONFIG_PATH'))
 config = TOMLFile(config_path / "naunet_config.toml")
