--- a/naunet/templates/base/cpp/tests/singlegrid.py.in.j2
+++ b/naunet/templates/base/cpp/tests/singlegrid.py.in.j2
@@ -7,17 +7,8 @@ from pathlib import Path
 from tomlkit.toml_file import TOMLFile
 
 from pynaunet_model import Naunet, NaunetData
-
-config_path = Path(os.getenv('NAUNET_CONFIG_PATH'))
-config = TOMLFile(config_path / "naunet_config.toml")
-content = config.read()
-chemistry = content["chemistry"]
-heating = chemistry["thermal"]["heating"]
-cooling = chemistry["thermal"]["cooling"]
-has_thermal = True if heating or cooling else False
-summary = content["summary"]
-species = summary["list_of_species"]
-nspec = len(species)
+from pynaunet_model.constants import NSPEC, HAS_THERMAL
+from pynaunet_model.constant_indexes import *
 
 naunet_solver = Naunet()
 naunet_data = NaunetData()
@@ -37,9 +28,9 @@ if @USE_CUDA@:
     naunet_solver.Reset(1)
 
 {% block initial_abundance %}
-y = np.ones(len(species)+has_thermal) * 1e-40
+y = np.ones(NSPEC + HAS_THERMAL) * 1e-40
 # Set your initial abundance here
-# e.g. y[species.index("H2")] = 0.5 * nH
+# e.g. y[IDX_H2I] = 0.5 * nH
 raise RuntimeError("Abundance has not been assigned")
 {% endblock initial_abundance %}
 
