--- a/naunet/templates/tests/cloud/renorm.py.in.j2
+++ b/naunet/templates/tests/cloud/renorm.py.in.j2
@@ -4,28 +4,28 @@ Species.set_known_elements(elements + ["E"])
 nH = 2e4;
 {% endblock parameters %}
 {% block reference_abundance %}
-y = np.ones(len(species)+has_thermal) * 1e-40
-y[species.index("H2")] = 0.5 * nH
-y[species.index("H")]  = 5e-5 * nH
-y[species.index("HE")] = 9.75e-2 * nH
-y[species.index("N")]  = 7.5e-5 * nH
-y[species.index("O")]  = 1.8e-4 * nH
-y[species.index("CO")] = 1.4e-4 * nH
-y[species.index("S")]  = 8.0e-8 * nH
-y[species.index("SI")] = 8.0e-9 * nH
-y[species.index("MG")] = 7.0e-9 * nH
-y[species.index("CL")] = 4.0e-9 * nH
+y = np.ones(NSPEC + HAS_THERMAL) * 1e-40
+y[IDX_H2I] = 0.5 * nH
+y[IDX_HI]  = 5e-5 * nH
+y[IDX_HeI] = 9.75e-2 * nH
+y[IDX_NI]  = 7.5e-5 * nH
+y[IDX_OI]  = 1.8e-4 * nH
+y[IDX_COI] = 1.4e-4 * nH
+y[IDX_SI]  = 8.0e-8 * nH
+y[IDX_SiI] = 8.0e-9 * nH
+y[IDX_MgI] = 7.0e-9 * nH
+y[IDX_ClI] = 4.0e-9 * nH
 {% endblock reference_abundance %}
 {% block updated_abundance %}
-y = np.ones(len(species)+has_thermal) * 1e-40
-y[species.index("H2")] = 0.4 * nH
-y[species.index("H")]  = 1e-3 * nH
-y[species.index("He")] = 1.9e-1 * nH
-y[species.index("N")]  = 7.5e-5 * nH
-y[species.index("O")]  = 8.0e-5 * nH
-y[species.index("CO")] = 2.8e-4 * nH
-y[species.index("S")]  = 4.0e-8 * nH
-y[species.index("Si")] = 2.0e-9 * nH
-y[species.index("Mg")] = 2.0e-9 * nH
-y[species.index("Cl")] = 1.0e-9 * nH
+y = np.ones(NSPEC + HAS_THERMAL) * 1e-40
+y[IDX_H2I] = 0.4 * nH
+y[IDX_HI]  = 1e-3 * nH
+y[IDX_HeI] = 1.9e-1 * nH
+y[IDX_NI]  = 7.5e-5 * nH
+y[IDX_OI]  = 8.0e-5 * nH
+y[IDX_COI] = 2.8e-4 * nH
+y[IDX_SI]  = 4.0e-8 * nH
+y[IDX_SiI] = 2.0e-9 * nH
+y[IDX_MgI] = 2.0e-9 * nH
+y[IDX_ClI] = 1.0e-9 * nH
 {% endblock updated_abundance %}
