--- a/naunet/templates/tests/cloud/singlegrid.py.in.j2
+++ b/naunet/templates/tests/cloud/singlegrid.py.in.j2
@@ -43,15 +43,15 @@ naunet_data.h2deseff = h2deseff
 naunet_data.uvcreff = uvcreff
 {% endblock parameters %}
 {% block initial_abundance %}
-y = np.ones(len(species)+has_thermal) * 1e-40
-y[species.index("H2")] = 0.5 * nH
-y[species.index("H")] = 5.0e-5 * nH
-y[species.index("He")] = 9.75e-2 * nH
-y[species.index("N")] = 7.5e-5 * nH
-y[species.index("O")] = 1.8e-4 * nH
-y[species.index("CO")] = 1.4e-4 * nH
-y[species.index("S")] = 8.0e-8 * nH
-y[species.index("Si")] = 8.0e-9 * nH
-y[species.index("Mg")] = 7.0e-9 * nH
-y[species.index("Cl")] = 4.0e-9 * nH
+y = np.ones(NSPEC + HAS_THERMAL) * 1e-40
+y[IDX_H2I] = 0.5 * nH
+y[IDX_HI] = 5.0e-5 * nH
+y[IDX_HeI] = 9.75e-2 * nH
+y[IDX_NI] = 7.5e-5 * nH
+y[IDX_OI] = 1.8e-4 * nH
+y[IDX_COI] = 1.4e-4 * nH
+y[IDX_SI] = 8.0e-8 * nH
+y[IDX_SiI] = 8.0e-9 * nH
+y[IDX_MgI] = 7.0e-9 * nH
+y[IDX_ClI] = 4.0e-9 * nH
 {% endblock initial_abundance %}
