--- a/naunet/templates/tests/deuterium/singlegrid.py.in.j2
+++ b/naunet/templates/tests/deuterium/singlegrid.py.in.j2
@@ -15,15 +15,15 @@ naunet_data.user_crflux = 2.5e-17
 naunet_data.user_GtoDN = (4.e0 * pi * rhoD * rD * rD * rD) / (3.e0 * DtoGM * amH)
 {% endblock parameters %}
 {% block initial_abundance %}
-y = np.ones(len(species)+has_thermal) * 1e-40
-y[species.index("pH2")]    = 1.0 / (1.0 + OPRH2) * 0.5 * nH
-y[species.index("oH2")]    = OPRH2 / (1.0 + OPRH2) * 0.5 * nH
-y[species.index("HD")]     = 1.5e-5 * nH
-y[species.index("He")]     = 1.0e-1 * nH
-y[species.index("N")]      = 2.1e-6 * nH
-y[species.index("O")]      = 1.8e-5 * nH
-y[species.index("C")]      = 7.3e-6 * nH
-y[species.index("GRAIN0")] = 1.3215e-12 * nH
+y = np.ones(NSPEC + HAS_THERMAL) * 1e-40
+y[IDX_pH2I]    = 1.0 / (1.0 + OPRH2) * 0.5 * nH
+y[IDX_oH2I]    = OPRH2 / (1.0 + OPRH2) * 0.5 * nH
+y[IDX_HDI]     = 1.5e-5 * nH
+y[IDX_HeI]     = 1.0e-1 * nH
+y[IDX_NI]      = 2.1e-6 * nH
+y[IDX_OI]      = 1.8e-5 * nH
+y[IDX_CI]      = 7.3e-6 * nH
+y[IDX_GRAIN0I] = 1.3215e-12 * nH
 {% endblock initial_abundance %}
 {% block timesteps %}
 times = np.loadtxt("timeres.dat")
