--- a/naunet/templates/tests/minimal/singlegrid.py.in.j2
+++ b/naunet/templates/tests/minimal/singlegrid.py.in.j2
@@ -6,8 +6,8 @@ naunet_data.nH = nH
 naunet_data.Tgas = 15.0
 {% endblock parameters %}
 {% block initial_abundance %}
-y = np.ones(len(species)) * 1e-40
-y[species.index("H")]      = nH
-y[species.index("C")]      = 7.0e-5 * nH
-y[species.index("CH")]     = 7.0e-5 * nH
+y = np.ones(NSPEC + HAS_THERMAL) * 1e-40
+y[IDX_HI]      = nH
+y[IDX_CI]      = 7.0e-5 * nH
+y[IDX_CHI]     = 7.0e-5 * nH
 {% endblock initial_abundance %}
