--- a/naunet/templates/cvode/CMakeLists.txt.j2
+++ b/naunet/templates/cvode/CMakeLists.txt.j2
@@ -1,28 +1,6 @@
-# To use CUDA by enabling language
-cmake_minimum_required(VERSION 3.18)
-{% set lang = "CUDA CXX" if general.device == "gpu" else "CXX" %}
-project({{ proj_name }} VERSION {{ general.version }} LANGUAGES {{ lang }})
+{% extends "base/cpp/CMakeLists.txt.j2" %}
 
-include(CMakePrintHelpers)
-
-set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
-
-if(NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE Release)
-endif()
-
-if(CMAKE_BUILD_TYPE STREQUAL Debug)
-    add_definitions(-DNAUNET_DEBUG)
-endif()
-
-message(STATUS "CMAKE_SYSTEM_NAME          = ${CMAKE_SYSTEM_NAME}"         )
-message(STATUS "CMAKE_CXX_COMPILER_ID      = ${CMAKE_CXX_COMPILER_ID}"     )
-message(STATUS "CMAKE_CXX_COMPILER_VERSION = ${CMAKE_CXX_COMPILER_VERSION}")
-message(STATUS "CMAKE_COMPILER_IS_GNUCXX   = ${CMAKE_COMPILER_IS_GNUCXX}"  )
-message(STATUS "CMAKE_BUILD_TYPE           = ${CMAKE_BUILD_TYPE}"          )
-
+{% block dependencies %}
 set(SUNDIALS_MIN_VERSION "6.0.0")
 set(SUNDIALS_DIR "" CACHE PATH "Path to SUNDIALSConfig.cmake")
 {% if general.method == "dense" %}
@@ -31,7 +9,7 @@ find_package(SUNDIALS ${SUNDIALS_MIN_VERSION} CONFIG)
 find_package(SUNDIALS ${SUNDIALS_MIN_VERSION} REQUIRED CONFIG)
 {% endif %}
 
-message(STATUS "SUNDIALS_FOUND             = ${SUNDIALS_FOUND}")
+message(STATUS "SUNDIALS_FOUND                = ${SUNDIALS_FOUND}")
 
 {% if general.method == "dense" -%}
 if (NOT SUNDIALS_FOUND)
@@ -126,23 +104,7 @@ if (_nvidia_smi)
 endif()
 {% endif %}
 
-message(STATUS "NVIDIA_GPU_COUNT           = " ${NVIDIA_GPU_COUNT})
+message(STATUS "NVIDIA_GPU_COUNT              = " ${NVIDIA_GPU_COUNT})
 
-set(MAKE_STATIC ON CACHE BOOL "")
-set(MAKE_SHARED ON CACHE BOOL "")
-set(MAKE_PYTHON OFF CACHE BOOL "")
-set(MAKE_TEST ON CACHE BOOL "")
-set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-
-add_subdirectory(src)
-
-if(MAKE_PYTHON)
-    find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
-    add_subdirectory(python)
-endif()
-
-if(MAKE_TEST)
-    enable_testing()
-    add_subdirectory(tests)
-endif()
+{% endblock dependencies %}
 
