--- a/naunet/templates/odeint/CMakeLists.txt.j2
+++ b/naunet/templates/odeint/CMakeLists.txt.j2
@@ -1,52 +1,14 @@
-# To use CUDA by enabling language
-cmake_minimum_required(VERSION 3.18)
-{% set lang = "CUDA CXX" if general.device == "gpu" else "CXX" %}
-project({{ proj_name }} VERSION {{ general.version }} LANGUAGES {{ lang }})
+{% extends "base/cpp/CMakeLists.txt.j2" %}
 
-include(CMakePrintHelpers)
-
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
-
-if(NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE Release)
-endif()
-
-if(CMAKE_BUILD_TYPE STREQUAL Debug)
-    add_definitions(-DNAUNET_DEBUG)
-endif()
-
-message(STATUS "CMAKE_SYSTEM_NAME          = ${CMAKE_SYSTEM_NAME}"         )
-message(STATUS "CMAKE_CXX_COMPILER_ID      = ${CMAKE_CXX_COMPILER_ID}"     )
-message(STATUS "CMAKE_CXX_COMPILER_VERSION = ${CMAKE_CXX_COMPILER_VERSION}")
-message(STATUS "CMAKE_COMPILER_IS_GNUCXX   = ${CMAKE_COMPILER_IS_GNUCXX}"  )
-message(STATUS "CMAKE_BUILD_TYPE           = ${CMAKE_BUILD_TYPE}"          )
-
-set(USE_BOOST ON)
+{% block dependencies %}
 find_package(Boost 1.65 REQUIRED)
-message(STATUS "Boost_INCLUDE_DIRS         = ${Boost_INCLUDE_DIRS}"        )
-message(STATUS "Boost_LIBRARY_DIRS         = ${Boost_LIBRARY_DIRS}"        )
+message(STATUS "Boost_INCLUDE_DIRS            = ${Boost_INCLUDE_DIRS}"        )
+message(STATUS "Boost_LIBRARY_DIRS            = ${Boost_LIBRARY_DIRS}"        )
 
 # find_package(CUDA REQUIRED)
 # find_package(CUDAToolkit REQUIRED)
 
 set(NVIDIA_GPU_COUNT 0)
 
-set(MAKE_STATIC ON CACHE BOOL "")
-set(MAKE_SHARED ON CACHE BOOL "")
-set(MAKE_PYTHON OFF CACHE BOOL "")
-set(MAKE_TEST ON CACHE BOOL "")
-set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+{% endblock dependencies %}
 
-add_subdirectory(src)
-
-if(MAKE_PYTHON)
-    find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
-    add_subdirectory(python)
-endif()
-
-if(MAKE_TEST)
-    enable_testing()
-    add_subdirectory(tests)
-endif()
